[gd_scene load_steps=10 format=3 uid="uid://bulva5lwvqke6"]

[ext_resource type="Script" path="res://planet.gd" id="1_p8mon"]
[ext_resource type="Texture2D" uid="uid://nbv5n2fruxgw" path="res://planets_sprite.png" id="2_dsuji"]
[ext_resource type="Texture2D" uid="uid://cpyelos8750ys" path="res://planet_ring.png" id="3_at86h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0vga8"]
radius = 8.0

[sub_resource type="Animation" id="Animation_pmlfd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_gxqob"]
resource_name = "new_animation"

[sub_resource type="Animation" id="Animation_2m426"]
resource_name = "selected"
length = 0.18
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.18),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_dpdw8"]
resource_name = "unselected"
length = 0.18
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.18),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ng1xh"]
_data = {
"RESET": SubResource("Animation_pmlfd"),
"new_animation": SubResource("Animation_gxqob"),
"selected": SubResource("Animation_2m426"),
"unselected": SubResource("Animation_dpdw8")
}

[node name="planet" type="Node2D"]
position = Vector2(0, -4.76837e-07)
script = ExtResource("1_p8mon")
sprite_img = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_at86h")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(0, 7.62939e-06)
texture = ExtResource("2_dsuji")
hframes = 3

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_0vga8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_ng1xh")
}

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
action_mode = 0
button_mask = 3

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
